--- a/pwd.yml
+++ b/pwd.yml
@@ -14,7 +14,7 @@ services:
     image: frappe/erpnext:v15.6.1
     deploy:
       restart_policy:
-        condition: none
+        condition: always
     entrypoint:
       - bash
       - -c
@@ -42,7 +42,7 @@ services:
     image: frappe/erpnext:v15.6.1
     deploy:
       restart_policy:
-        condition: none
+        condition: always
     volumes:
       - sites:/home/frappe/frappe-bench/sites
       - logs:/home/frappe/frappe-bench/logs
